--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-20 01:43:51
+lastsearch = 2024-07-20 11:33:52
 
 [demxanh.com]
 match = 13.8%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = -17.2%%
-title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
+match = 51.7%%
+title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
 
 [changagoinemgiasi.com]
 match = 3.4%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Bộ chăn ga gấm Pyeoda SkySilk
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 
 [www.facebook.com]
-match = 28.0%%
-title = Chăn Ga Gối Đệm Singapore
-url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
+match = 20.7%%
+title = Chăn Ga Gối Đệm Singapore | Hanoi
+url = https://www.facebook.com/changagoisingapore/
 
 [changagoidemdep.vn]
 match = 3.4%%
