--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-07-20 03:15:42
+lastsearch = 2024-07-20 11:42:17
 
 [shadow.vn]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Đèn pin FENIX HT18 Hunting (1500 Lumens)
 url = https://bisu.vn/den-pin-fenix-ht18-hunting-1500-lumens-p18720670.html
 
 [www.youtube.com]
-match = -146.7%%
-title = HT-18 Thermal Imaging Camera - Review & Demo
-url = https://www.youtube.com/watch?v=9Q9PFX2ey6s
+match = -246.7%%
+title = Review đèn pin Fenix HT18 sáng 1500 lumens, chiếu xa 925 ...
+url = https://www.youtube.com/watch?v=9T0cK1pjzWY
 
 [vnqtech.com]
 match = -200.0%%
