--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-19 23:52:54
+lastsearch = 2024-07-20 11:34:56
 
 [shopee.vn]
-match = -28.0%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -8.0%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [tiki.vn]
 match = -16.0%%
@@ -77,9 +77,9 @@ title = Vé tàu MRT sân bay Taoyuan về Taipei
 url = https://divui.com/ve-tau-mrt-san-bay-taoyuan-ve-taipei
 
 [vn.taiwantoday.tw]
-match = -66.7%%
-title = Taiwan Today
-url = https://vn.taiwantoday.tw/
+match = -56.0%%
+title = 6 bộ phim Đài Loan được trình chiếu tại Liên hoan ...
+url = https://vn.taiwantoday.tw/news.php?unit=461&post=222153
 
 [vn.usembassy.gov]
 match = -24.0%%
