--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-20 03:29:51
+lastsearch = 2024-07-20 11:35:40
 
 [demxanh.com]
-match = -135.3%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 64.7%%
+title = Chiếu trúc hạt đen
+url = https://demxanh.com/chieu-truc-hat-den-ha-noi.html
 
 [dem24h.vn]
 match = -29.4%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
 url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [thegioidemtot.vn]
-match = 46.2%%
-title = Chiếu Hạt Đen
-url = https://thegioidemtot.vn/dt17327-chieu-hat-den.html
+match = -58.8%%
+title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
+url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [demre.com.vn]
 match = 35.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt đen 1.2x1.9m
 url = https://demre.com.vn/chieu-truc-hat-den-1-2x1-9m
 
 [shopee.vn]
-match = -70.6%%
-title = Chiếu trúc hạt đen không viền hàng bền , đẹp
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-hàng-bền-đẹp-i.270303342.8319885845
+match = -105.9%%
+title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [changagoidemdep.vn]
 match = 0.0%%
