--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-20 09:03:59
+lastsearch = 2024-07-20 11:39:47
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,8 +17,8 @@ title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
-match = -15.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp
+match = -115.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -27,9 +27,9 @@ title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -140.0%%
-title = Korean Embassy in South Africa 주남아공한국대사관
-url = https://www.facebook.com/KoreanEmbassySouthAfrica/
+match = -160.0%%
+title = CDT Jake Sorrels successfully defended his senior thesis “ ...
+url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -90.0%%
+title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
+url = https://en.yna.co.kr/view/AEN20130109006800325
 
 [www.vlr.gg]
 match = 5.6%%
