--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-20 10:31:20
+lastsearch = 2024-07-20 11:47:20
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUUJrE3z&sig=ACfU3U1dyU4y_vN7qjNGmGlqIcft4YuknQ&hl=en&sa=X&ved=2ahUKEwjupciQ17SHAxUoM1kFHabxDjcQ6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUUKlK-y&sig=ACfU3U16anIoHS9zn0JEvM-FJFa6hyQIPw&hl=en&sa=X&ved=2ahUKEwj09dSO6LSHAxWHrYkEHS_1A8sQ6AF6BAgbEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
