--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-20 09:49:02
+lastsearch = 2024-07-20 11:49:28
 
 [www.muji.com]
 match = 7.1%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chan-dong-long-vu-muji/
 [demxanh.com]
 match = -135.7%%
 title = Chăn tuyết Muji 01 | Chăn lông tuyết cao cấp
-url = https://demxanh.com/chan-tuyet-muji-01.html
+url = https://demxanh.com/chan-tuyet-muji-01.html?srsltid=AfmBOoofqqMxFKVVT52v7Vlr0AVnxh89dzOfG2a2-TTMnUuASmExOqZB
 
 [www.youtube.com]
 match = -14.3%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOoqg8ect5hvaY_9ZVs6EgyPmQ0Q7cL9Uc38QG8Gzd06yYDrU2zaV
 
 [xachtaynhat.com.vn]
 match = -35.7%%
