--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-20 05:37:19
+lastsearch = 2024-07-20 11:48:23
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hu
 url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
-match = -156.2%%
-title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkMpdmr69&sig=ACfU3U1rSPWKVHMQ_vSQQHJlSdgkAO4lQg&hl=en&sa=X&ved=2ahUKEwjt3NO0lbSHAxWYmYkEHQGcAbYQ6AF6BAgjEAM
+match = -250.0%%
+title = Tập Thơ Truyện Hồn Lang Về Cõi Thế - Page 18 - Google Books Result
+url = https://books.google.com/books?id=ePhiEAAAQBAJ&pg=PA18&lpg=PA18&dq=chieu+lac+soc+18&source=bl&ots=lke4yYHnqp&sig=ACfU3U1JKOrCkAhkWRRzEohDy2U8lJ3rOw&hl=en&sa=X&ved=2ahUKEwio8IWt6LSHAxUtrYkEHTCNDxIQ6AF6BAgaEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [baothuathienhue.vn]
 match = -200.0%%
