--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-20 06:29:07
+lastsearch = 2024-07-20 11:48:45
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -188.2%%
-title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
-url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
+match = -170.6%%
+title = Florida HOA. Are HOAs still able to enter properties ...
+url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -22,9 +22,9 @@ title = Do HOAs have to report beneficial ownership under the ...
 url = https://www.nixonpeabody.com/insights/alerts/2024/05/08/do-hoas-have-to-report-beneficial-ownership-under-the-cta
 
 [www.flsenate.gov]
-match = -70.6%%
-title = Chapter 720 - 2023 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2023/Chapter720/All
+match = -129.4%%
+title = Chapter 720 Section 303 - 2018 Florida Statutes
+url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
 
 [www.doorloop.com]
 match = 0.0%%
