--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-20 09:51:50
+lastsearch = 2024-07-20 12:15:49
 
 [www.diepxuan.com]
-match = -6.7%%
-title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+match = 7.1%%
+title = HT - Điệp Xuân
+url = https://www.diepxuan.com/ht.html
 
 [shopee.vn]
 match = -6.7%%
