--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-20 02:17:34
+lastsearch = 2024-07-20 13:20:36
 
 [demxanh.com]
 match = -42.9%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -28.6%%
-title = Red beans salad recipe pakistani - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1af6a4ab0d.xn--p1ai/1387249553misclinicv4fe36a
+match = -39.3%%
+title = Criminology jobs columbus ohio - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--43-6kch9bxbh4f.xn--p1ai/V2EPYSIDs53afe
 
 [news.google.it]
 match = -3.6%%
