--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-20 05:47:43
+lastsearch = 2024-07-20 13:19:42
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -42,9 +42,9 @@ title = Our New Friend, Gani (30 mins) l Episode 9 l Tayo the Little Bus
 url = https://www.youtube.com/watch?v=8L7o3sc3crI
 
 [www.regmovies.com]
-match = -215.4%%
-title = Regal Hollywood @ North I-85 Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
+match = -223.1%%
+title = Regal Hollywood - Gainesville Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
 
 [dds.georgia.gov]
 match = -284.6%%
@@ -272,9 +272,9 @@ title = The Little Bus Tayo Special Wind-Up Set : Toys & Games
 url = https://www.amazon.com/Tayo-Little-Bus-Play-Set/dp/B0084TMPQ6
 
 [www.imdb.com]
-match = -92.3%%
-title = Ginny & Georgia (TV Series 2021
-url = https://www.imdb.com/title/tt10813940/
+match = 0.0%%
+title = Silenced (2011)
+url = https://www.imdb.com/title/tt2070649/
 
 [ottawabraves.com]
 match = -292.3%%
