--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-20 13:38:50
+lastsearch = 2024-07-20 14:13:44
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,14 +12,14 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 25.8%%
-title = Bộ chăn ga gối lụa Singapore luxury 7 món L7M18
-url = https://demxanh.com/bo-chan-ga-goi-lua-singapore-luxury-7-mon-l7m18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
-match = 48.0%%
-title = Bộ chăn ga gối SH_H19 069
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-h19-069
+match = 50.0%%
+title = Bộ chăn ga gối SH_UC24 102
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-102
 
 [changagoidemsonghong.com]
 match = -29.0%%
