--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-20 13:18:57
+lastsearch = 2024-07-20 14:16:01
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -22,9 +22,9 @@ title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -14.3%%
+title = Chăn ga gối Home mã H17-048 Sale 30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = -71.4%%
-title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
-url = https://songhong.info/chan-ga-goi-micro-dn1805
+match = -85.7%%
+title = Nơi cung cấp chăn gối Sông Hồng mã H18-056 chính hiệu!
+url = https://songhong.info/chan-ga-goi-home-h18-056
 
 [www.diepxuan.com]
 match = -81.0%%
