--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-20 13:46:52
+lastsearch = 2024-07-20 14:14:46
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,11 +54,11 @@ url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqWdeMYJ&sig=ACfU3U1JuwYMonPt_nSPOobZFH269edAyg&hl=en&sa=X&ved=2ahUKEwiL1ubqgrWHAxXiMlkFHWrOBDgQ6AF6BAgkEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqWdfS3M&sig=ACfU3U3Qg3tjWVYwOYA_GCPl3ZGgX0duNA&hl=en&sa=X&ved=2ahUKEwjp4-OIibWHAxUdEGIAHek6DzgQ6AF6BAgiEAM
 
 [www.travelweekly.com]
-match = -87.0%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
+match = -56.5%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
