--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-20 12:53:16
+lastsearch = 2024-07-20 15:18:44
 
 [everon.online]
 match = -12.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -20.0%%
-title = BÍCH PHƯƠNG - Let's Du Dua (Official M/V)
-url = https://www.youtube.com/watch?v=ZF3b1nK-TjM
+match = 10.5%%
+title = Bà 4.0 - Bố Con Sâu
+url = https://www.youtube.com/watch?v=OeqjYQHAWRo
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -8.0%%
-title = SÀN GIAO DỊCH BẤT ĐỘNG SẢN THANH ...
-url = https://m.facebook.com/groups/muabannhadathanoi247/posts/8021310421296679/
+match = -24.0%%
+title = GROUP MUA BÁN CHO THUÊ CĂN HỘ CHUNG CƯ CAO ...
+url = https://m.facebook.com/groups/113376572654593/posts/1443568039635433/
 
 [dantri.com.vn]
 match = -60.0%%
@@ -240,4 +240,19 @@ url = http://www.hanoifishing.com/NewsDetail.aspx?newsID=894
 match = 28.0%%
 title = Bức tượng cao nhất thế giới
 url = https://vnexpress.net/buc-tuong-cao-nhat-the-gioi-4610229.html
+
+[baolongan.vn]
+match = -80.0%%
+title = Trà Vinh: Công bố kết thúc tình huống khẩn cấp sự cố sụp ...
+url = https://baolongan.vn/tra-vinh-cong-bo-ket-thuc-tinh-huong-khan-cap-su-co-sup-lun-ke-hiep-thanh-a179284.html
+
+[www.vietravel.com]
+match = -92.0%%
+title = Hành trình du lịch Seoul - Jeju, bức tranh đa sắc của vẻ ...
+url = https://www.vietravel.com/vn/am-thuc-kham-pha/hanh-trinh-du-lich-seoul-jeju-buc-tranh-da-sac-cua-ve-dep-hien-dai-va-nen-tho-han-quoc-v15488.aspx
+
+[vi.wikipedia.org]
+match = -12.0%%
+title = Vịnh Hạ Long – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Vịnh_Hạ_Long
 
