--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-20 14:17:28
+lastsearch = 2024-07-20 15:14:43
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -53.6%%
-title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
+match = -17.9%%
+title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -88,8 +88,8 @@ url = http://soyte.hatinh.gov.vn/tin-tuc-su-kien/sang-17-9-da-15-ngay-khong-ghi-
 
 [med.loship.vn]
 match = -57.1%%
-title = Nhà Thuốc Minh Châu - Hai Bà Trưng - Giao nhanh trong 1 giờ
-url = https://med.loship.vn/nhathuocminhchauhaibatrung
+title = Vistar Pharmacy - Phạm Văn Chiêu - Giao nhanh trong 1 giờ
+url = https://med.loship.vn/vistarpharmacyphamvanchieu
 
 [medlatec.vn]
 match = 0.0%%
@@ -99,12 +99,12 @@ url = https://medlatec.vn/tu-dien-benh-ly/san-day-sbfou
 [www.merckmillipore.com]
 match = 27.3%%
 title = PHIẾU AN TOÀN HÓA CHẤT
-url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
+url = https://www.merckmillipore.com/Web-IN-Site/en_US/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-102067&DocumentType=MSD&DocumentId=102067_SDS_VN_VI.PDF&DocumentUID=9332876&Language=VI&Country=VN&Origin=null
 
 [www.facebook.com]
-match = 28.6%%
-title = Nội thất nhựa đài loan thành phong
-url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/
+match = 17.9%%
+title = TUYỂN DỤNG SPA - MASSAGE - NAIL
+url = https://www.facebook.com/groups/911715052518456/
 
 [www.favri.org.vn]
 match = -10.7%%
@@ -245,4 +245,9 @@ url = https://tiki.vn/search?q=chiếu trúc đài loan
 match = 26.9%%
 title = Xoài đài loan - CAYGIONG56
 url = https://www.caygiong56.com/t.php?posts=117-xoai-dai-loan
+
+[huemed-univ.edu.vn]
+match = -32.1%%
+title = nghiên cứu chẩn đoán một số dị dạng mạch máu ngoại ...
+url = https://huemed-univ.edu.vn/uploads/ck_upload/Phòng ĐT SĐH/LuanAn/LA NCS NGUYỄN ĐÌNH LUÂN.pdf
 
