--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-20 16:31:11
+lastsearch = 2024-07-20 17:15:21
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+title = Nhớ nghề dệt chiếu quê tôi
+url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
 
 [www.youtube.com]
 match = -231.2%%
@@ -72,9 +72,9 @@ title = Bộ ngoại giao thông tin về việc điều tra, hậu sự nhóm n
 url = https://www.youtube.com/watch?v=rUGm2ZH8ccc
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EgDcBA0&sig=ACfU3U0lkY9-pERkRYitNPKh68TdiuQF1g&hl=en&sa=X&ved=2ahUKEwj15P_Hp7WHAxW5nokEHcXbBhMQ6AF6BAggEAM
+match = -206.2%%
+title = Quân lực Việt-Nam: Quân lực Việt Nam Cộng Hòa trong giai ...
+url = https://books.google.com/books?id=RvXeAAAAMAAJ&pg=PA17&lpg=PA17&dq=chieu+lac+soc+16&source=bl&ots=aZ3SwmZd5J&sig=ACfU3U2vVAiGNfXA0dUXqjzs8DCrfDBQng&hl=en&sa=X&ved=2ahUKEwjSirG3sbWHAxUhJkQIHWxlAkkQ6AF6BAgYEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
