--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-20 09:52:14
+lastsearch = 2024-07-20 17:16:14
 
 [www.lazada.vn]
 match = -60.9%%
@@ -12,14 +12,14 @@ title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
 url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [www.facebook.com]
-match = 85.0%%
-title = Chiếu Nhựa Thái Bình
-url = https://www.facebook.com/chieunhuathaibinh/?locale=cs_CZ
+match = 52.2%%
+title = Chiếu Nhựa Thái Bình | Thanh Hóa
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = 26.1%%
-title = chiếu nhựa thái bình 1m8 x2m - chieu1m8
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m8-x2m-43900792.html
+match = 0.0%%
+title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
 
 [shopee.vn]
 match = 4.3%%
